--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,18 @@
           <scope>test</scope>
       </dependency>
   </dependencies>
+  <distributionManagement>
+    <snapshotRepository>
+        <id>snapshots</id>
+        <name>7c526685f32f-snapshots</name>
+        <url>http://ec2-3-95-55-181.compute-1.amazonaws.com:8081/artifactory/libs-snapshot-local</url>
+    </snapshotRepositor>
+    <repository>
+        <id>central</id>
+        <name>7c526685f32f-releases</name>
+        <url>http://ec2-3-95-55-181.compute-1.amazonaws.com:8081/artifactory/libs-release-local</url>
+    </repository>
+</distributionManagement>
     <build>
         <finalName>helloworld</finalName>
         <plugins>
