--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,18 @@
   <version>1.0-SNAPSHOT</version>
   <name>hello-world-servlet-example Maven Webapp</name>
   <url>http://maven.apache.org</url>
+        <properties>
+                <!-- versions -->
+
+                <spring.version>5.0.2.RELEASE</spring.version>
+                <junit.version>4.12</junit.version>
+                <log4j.version>1.2.17</log4j.version>
+                <sonar.host.url>http://ec2-3-230-26-162.compute-1.amazonaws.com</sonar.host.url>
+
+                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+                <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        </properties>
+
   <dependencies>
         <dependency>
             <groupId>javax.servlet</groupId>
